--- a/portal.html
+++ b/portal.html
@@ -134,7 +134,7 @@
         <a href="https://wa.me/6287832162924" class="whatsapp-btn" target="_blank">
             Hubungi Kami via WhatsApp 💬
         </a>
-        <p style="text-align: center; font-size: 0.9em; margin-top: -10px;">(Klik untuk chat langsung ke nomor WA)</p>
+        <p style="text-align: center; font-size: 0.9em; margin-top: -10px;">(Hubungi langsung ke nomor WA jika ingin memesan)</p>
         
         <div class="service-section">
             <div class="service-content">
@@ -205,4 +205,5 @@
     </footer>
 
 </body>
+
 </html>
